--- a/components/lazreport/source/languages/lr_const.ru.po
+++ b/components/lazreport/source/languages/lr_const.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2024-10-28 18:29+0300\n"
+"PO-Revision-Date: 2025-01-10 01:35+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
-"X-Generator: Poedit 2.3.1\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: lr_const.saboutformcapt
 msgid "About FastReport"
@@ -251,7 +251,7 @@ msgstr "0"
 #: lr_const.sclassobjectnotfound
 #, object-pascal-format
 msgid "Class Object \"%s\" not found"
-msgstr "Объект \"%s\" класса не найден"
+msgstr "Объект класса \"%s\" не найден"
 
 #: lr_const.sconfirm
 msgid "Confirm"
