LCL/ShellCtrls: Change internal format string for displaying GB file sizes in TShellListView.

--- a/lcl/languages/lclstrconsts.co.po
+++ b/lcl/languages/lclstrconsts.co.po
@@ -1472,7 +1472,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
