--- a/lcl/languages/lclstrconsts.ko.po
+++ b/lcl/languages/lclstrconsts.ko.po
@@ -1562,7 +1562,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
