--- a/lcl/languages/lclstrconsts.ca.po
+++ b/lcl/languages/lclstrconsts.ca.po
@@ -1532,7 +1532,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
