--- a/lcl/languages/lclstrconsts.el.po
+++ b/lcl/languages/lclstrconsts.el.po
@@ -1465,7 +1465,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
