--- a/lcl/languages/lclstrconsts.fi.po
+++ b/lcl/languages/lclstrconsts.fi.po
@@ -1547,7 +1547,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
