--- a/lcl/languages/lclstrconsts.he.po
+++ b/lcl/languages/lclstrconsts.he.po
@@ -1581,7 +1581,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
