--- a/lcl/languages/lclstrconsts.ja.po
+++ b/lcl/languages/lclstrconsts.ja.po
@@ -1558,7 +1558,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
