--- a/lcl/languages/lclstrconsts.pl.po
+++ b/lcl/languages/lclstrconsts.pl.po
@@ -1560,7 +1560,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
