--- a/lcl/languages/lclstrconsts.pt_BR.po
+++ b/lcl/languages/lclstrconsts.pt_BR.po
@@ -1539,7 +1539,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
