--- a/lcl/languages/lclstrconsts.zh_TW.po
+++ b/lcl/languages/lclstrconsts.zh_TW.po
@@ -1469,7 +1469,7 @@ msgstr ""
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
-msgid "%.1n GB"
+msgid "%s GB"
 msgstr ""
 
 #: lclstrconsts.sshellctrlsinvalidpath
