--- a/lcl/languages/lclstrconsts.ru.po
+++ b/lcl/languages/lclstrconsts.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Project-Id-Version: lazaruside\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2025-01-20 17:09+0300\n"
+"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
+"Language-Team: \n"
+"Language: ru\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2024-02-19 16:55+0300\n"
-"Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Language: ru\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 3.5\n"
 
 #: lclstrconsts.hhshelpbrowsernotexecutable
 #, object-pascal-format
@@ -1465,12 +1465,12 @@ msgstr "%s байт"
 
 #: lclstrconsts.sshellctrlsfolder
 msgid "Folder"
-msgstr ""
+msgstr "Каталог"
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
 msgid "%s GB"
-msgstr ""
+msgstr "%s ГБ"
 
 #: lclstrconsts.sshellctrlsinvalidpath
 #, object-pascal-format
