IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-01-27 22:13+0300\n"
+"PO-Revision-Date: 2025-01-30 22:25+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -9980,6 +9980,10 @@ msgstr "Поиск отсутствующего модуля"
 msgid "Find option"
 msgstr "Найти параметр"
 
+#: lazarusidestrconsts.lisfindoverridestoo
+msgid "Find overrides too"
+msgstr "Искать также перекрытые методы"
+
 #: lazarusidestrconsts.lisfirst
 msgid "First"
 msgstr "В начале"
@@ -10253,7 +10257,7 @@ msgstr "Поиск"
 
 #: lazarusidestrconsts.lisfrisearchincommentstoo
 msgid "Search in comments too"
-msgstr "Искать и в комментариях"
+msgstr "Искать также в комментариях"
 
 #: lazarusidestrconsts.lisfull
 msgid "Full"
